--- a/dev/scss/_mixins-mike.scss
+++ b/dev/scss/_mixins-mike.scss
@@ -21,6 +21,7 @@
 
 @mixin display-flex {
     display: flex;
+    flex-wrap: wrap;
     justify-content: $center;
     align-content: $center;
     align-items: $center;
