--- a/dev/scss/_responsive-waste.scss
+++ b/dev/scss/_responsive-waste.scss
@@ -1,3 +1,12 @@
-.hidden-mobile {
-    display: none;
+@use "variables-mike";
+
+@include mq-mobile($mobile) {
+    .hidden-mobile {
+        display: none;
+    }
+}
+
+.waste-articles{
+display: flex;
+flex-wrap: wrap;
 }
