updated responsive scss
updated responsive scss

--- a/dev/scss/_mixins-mike.scss
+++ b/dev/scss/_mixins-mike.scss
@@ -2,19 +2,19 @@
 
 
 @mixin mq-mobile($w) {
-    @media (max-width: $w){
+    @media (min-width: $w){
         @content;
     }
 }
 
 @mixin mq-tablet($w) {
-    @media (max-width: $w){
+    @media (min-width: $w){
         @content;
     }
 }
 
 @mixin mq-desktop($w) {
-    @media (max-width: $w){
+    @media (min-width: $w){
         @content;
     }
 }
