--- a/dev/scss/_newsletter-signup.scss
+++ b/dev/scss/_newsletter-signup.scss
@@ -1,14 +1,19 @@
-// @use "variables";
+// @use "variables" as *;
+@use "mixins-mike" as *;
 .newsletter {
   //this will need to be changed to the branded color variable
-  background-color: lightblue;
-  color: blue;
+  background-color: $light-blue-background lightblue;
+  color: $dark-header-blue blue;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   font-family: roboto;
   form {
     padding: 1rem 0.15rem;
+    @media only screen and (min-width: 48rem) {
+      display: flex;
+      align-items: center;
+    }
   }
   label {
     font-weight: 500;
@@ -31,7 +36,7 @@
       padding: 0.5rem 1rem;
       grid-column: 2/3;
       //color to be updated
-      background-color: darkblue;
+      background-color: $branded-blue darkblue;
       color: white;
       font-weight: bold;
     }
