--- a/dev/scss/_responsive-waste.scss
+++ b/dev/scss/_responsive-waste.scss
@@ -5,23 +5,46 @@
         display: none;
     }
 
+@media (max-width: 600px) {
+    .waste-collection {
+        @include display-flex;
+    }    
+}
+
 @include mq-tablet($mid){
     .hidden-mobile {
         display: block;
     }
+    .waste-collection {
+        max-width: 15.625rem;
+    }
     .waste-articles{
-        display: flex;
-        flex-wrap: wrap;
+        @include display-flex;
+        text-align: center;
+        margin: auto;
     }
 }
 
 @include mq-desktop($desktop) {
     .hidden-mobile {
         display: block;
+
     }
     .waste-articles{
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-around;
+        align-content: $center;
+        align-items: $center;
+        padding: 1rem;
+        text-align: center;
+        margin: auto;
     }
 
+}
+
+#carousel {
+    position: absolute;
+    max-width: 100%;
+    height: auto;
 }
