--- a/dev/scss/_newsletter-signup.scss
+++ b/dev/scss/_newsletter-signup.scss
@@ -1,4 +1,4 @@
-// @use "variables" as *;
+@use "variables" as *;
 @use "mixins-mike" as *;
 .newsletter {
   //this will need to be changed to the branded color variable
