full width form submit

--- a/dev/scss/_fonts.scss
+++ b/dev/scss/_fonts.scss
@@ -12,6 +12,7 @@ body {
 	color: $text-gray;
 	background-color: #fff;
     font-family: 'Roboto Condensed', sans-serif;
+	overflow-x: hidden;
 }
 
 h1,
