--- a/dev/scss/_form-CTA.scss
+++ b/dev/scss/_form-CTA.scss
@@ -57,12 +57,19 @@
     }
 
     @include mq-tablet($mid){
+
+        padding: 1rem;
+        
         form {
             display: grid;
             grid-template-columns: 50% 50%;
             grid-template-rows: 1fr;
             justify-content: center;
-            gap: 1rem;
+            gap: 0.75rem;
+            
+            input[type=submit] {
+                grid-column: 1 / span 2;
+            }
         }
     }
 }
