--- a/dev/scss/_form-CTA.scss
+++ b/dev/scss/_form-CTA.scss
@@ -34,6 +34,12 @@
         div {
             width: 100%;
             padding: 0.25rem 0;
+
+            
+        }
+
+        div:first-of-type select {
+            background-color: $form-gray-active;
         }
         
         label {
@@ -61,8 +67,13 @@
     }
 
     @include mq-tablet($mid){
-        text-align: center;
         padding: 1rem;
+        > div {
+            text-align: center;
+            h2 {
+                padding-bottom: 0.5rem;
+            }
+        }
         
         form {
             display: grid;
@@ -73,6 +84,21 @@
             
             input[type=submit] {
                 grid-column: 1 / span 2;
+            }
+        }
+    }
+
+    @include mq-desktop($desktop){
+        form {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: 1fr;
+            justify-content: center;
+            gap: 0.75rem;
+            
+            input[type=submit] {
+                grid-column: 1 / span 5;
+                margin: 1rem 0;
             }
         }
     }
