--- a/dev/scss/_carousel.scss
+++ b/dev/scss/_carousel.scss
@@ -16,7 +16,6 @@ body {
 }
 .slide > img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
   display: block;
 }
@@ -44,4 +43,11 @@ body {
 }
 #carouselNav1 {
   background-color: blue;
+}
+#place-holder {
+  display: block;
+  opacity: 0;
+}
+#place-holder > img {
+  width: 100vw;
 }
