--- a/dev/scss/_responsive-waste.scss
+++ b/dev/scss/_responsive-waste.scss
@@ -1,50 +1,48 @@
 @use "variables-mike" as *;
 @use "mixins-mike" as *;
 
-    .hidden-mobile {
-        display: none;
-    }
-
-@media (max-width: 600px) {
-    .waste-collection {
-        @include display-flex;
-    }    
+.hidden-mobile {
+  display: none;
 }
 
-@include mq-tablet($mid){
-    .hidden-mobile {
-        display: block;
-    }
-    .waste-collection {
-        max-width: 15.625rem;
-    }
-    .waste-articles{
-        @include display-flex;
-        text-align: center;
-        margin: auto;
-    }
+@media (max-width: 600px) {
+  .waste-collection {
+    @include display-flex;
+  }
+}
+
+@include mq-tablet($mid) {
+  .hidden-mobile {
+    display: block;
+  }
+  .waste-collection {
+    max-width: 15.625rem;
+  }
+  .waste-articles {
+    @include display-flex;
+    text-align: center;
+    margin: auto;
+  }
 }
 
 @include mq-desktop($desktop) {
-    .hidden-mobile {
-        display: block;
-
-    }
-    .waste-articles{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-content: $center;
-        align-items: $center;
-        padding: 1rem;
-        text-align: center;
-        margin: auto;
-    }
-
+  .hidden-mobile {
+    display: block;
+  }
+  .waste-articles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: $center;
+    align-items: $center;
+    padding: 1rem;
+    text-align: center;
+    margin: auto;
+  }
 }
 
 #carousel {
-    position: absolute;
-    max-width: 100%;
-    height: auto;
+  // position: absolute;
+  max-width: 100%;
+  height: auto;
 }
