--- a/dev/scss/_burger-menu.scss
+++ b/dev/scss/_burger-menu.scss
@@ -1,5 +1,8 @@
 @use "variables" as *;
 
+#logo {
+    width: 10%;
+}
 nav {
     display: flex;
     justify-content: space-between;
@@ -54,4 +57,8 @@ nav {
 
         };
     };
+    i {
+        display: inline-block;
+        padding: 12px;
+    }
 }
