--- a/dev/scss/_hero.scss
+++ b/dev/scss/_hero.scss
@@ -61,12 +61,12 @@ header {
     }
 }
 
-.main-navigation-container {
+// .main-navigation-container {
     
-    ul {
-        display: inline-flex;
-        padding-inline-start: 0;
-        list-style-type: none;
+//     ul {
+//         display: inline-flex;
+//         padding-inline-start: 0;
+//         list-style-type: none;
 
-    }
-}
+//     }
+// }
