--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Fonts and Main Blue
-$branded-blue: hsl(204, 64%, 55%); // for most CTAs, h3, light blue background
+$branded-blue: #009DDC; // for most CTAs, h3, light blue background
 $dark-header-blue: hsl(204, 47%, 27%); // for h2s
 $text-gray: #282829; // for p text
 $map-text-gray: hsl(0, 1%, 31%); // specific blue gray for the h3 in teh map section and tertiary links
