--- a/dev/scss/_burger-menu.scss
+++ b/dev/scss/_burger-menu.scss
@@ -1,8 +1,7 @@
 @use "variables" as *;
+@use "variables-mike" as *;
 
-#logo {
-    width: 10%;
-}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -11,7 +10,8 @@ nav {
         list-style: none;
         li a {
             display: inline-block;
-            padding: 15px;
+            // removing this temporarily:
+            // padding: 15px;
             text-decoration: none;
         }
         .closeMenu {
@@ -28,7 +28,7 @@ nav {
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: $tablet-landscape) {
     nav{
         .mainMenu {
             height: 100vh;
