--- a/dev/scss/_carousel.scss
+++ b/dev/scss/_carousel.scss
@@ -1,3 +1,5 @@
+@use "variables" as *;
+
 body {
   margin: 0;
 }
@@ -37,13 +39,13 @@ body {
 // }
 .circle {
   border-radius: 50%;
-  height: 1rem;
-  width: 1rem;
+  height: 0.75rem;
+  width: 0.75rem;
   background-color: white;
   margin: 0 0.5rem;
 }
 #carouselNav1 {
-  background-color: blue;
+  background-color: $branded-blue;
 }
 #place-holder {
   display: block;
