--- a/dev/scss/_mixins-mike.scss
+++ b/dev/scss/_mixins-mike.scss
@@ -25,5 +25,5 @@
     justify-content: $center;
     align-content: $center;
     align-items: $center;
-    padding: 1rem;
+    // padding: 1rem;
 }
