--- a/dev/scss/_CTA.scss
+++ b/dev/scss/_CTA.scss
@@ -18,6 +18,7 @@
 }
 #contact-CTA {
   background-color: $medium-blue-background;
+  padding-bottom: 3rem;
   div {
     text-align: center;
     padding: 2rem;
@@ -28,16 +29,39 @@
     }
   }
 }
+#install-section {
+  position: relative;
+  overflow: hidden;
+}
+#footer-wave {
+  position: absolute;
+  bottom: -2px;
+  background-image: url("../images/wave-blue-light.png");
+  width: 100%;
+  background-position: center;
+  background-size: 170% 100%;
+  height: 2rem;
+}
 @media only screen and (min-width: 48rem) {
   #install-section {
     display: grid;
     grid-template-columns: 50% 50%;
   }
   #install-CTA {
-    padding: 5rem 1rem;
+    padding: 6rem 1rem;
   }
   #contact-CTA {
     order: -1;
-    padding: 5rem 1rem;
+    padding: 6rem 1rem;
+  }
+}
+
+@media only screen and (min-width: 40rem) {
+  #footer-wave {
+    background-size: 100% 100%;
+    height: 5rem;
+    #contact-CTA {
+      padding-bottom: 6rem;
+    }
   }
 }
