--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -1,7 +1,16 @@
 @use "variables" as *;
+
 footer {
   background-color: $branded-blue;
   padding: 2rem;
+
+  i {
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 0.25rem;
+    font-size: 0.625rem;
+    color: $branded-blue;
+  }
 }
 #footer-wrapper {
   display: flex;
@@ -10,7 +19,7 @@ footer {
   text-align: center;
   span {
     color: white;
-    font-weight: 700;
+    font-weight: 500;
   }
   img {
     width: 10rem;
@@ -18,6 +27,7 @@ footer {
   a {
     padding: 0;
     color: white;
+    font-weight: 500;
   }
 }
 #footer-links {
@@ -25,6 +35,26 @@ footer {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  align-content: center;
+
+  > * {
+    // padding: rem;
+    margin: 0.5rem;
+  }
+
+  .footer-contact-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .fa-brands  {
+    width: 32px;
+    font-size: 1rem;
+    padding: 0.5rem;
+
+  }
 }
 @media only screen and (min-width: 48rem) {
   #footer-wrapper {
