--- a/dev/scss/_newsletter-signup.scss
+++ b/dev/scss/_newsletter-signup.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  text-align: center;
   font-family: roboto;
   form {
     padding: 1rem 0.15rem;
@@ -17,16 +18,18 @@
   label {
     font-weight: 500;
     text-align: center;
+    @media only screen and (min-width: 48rem) {
+      padding-right: 1rem;
+    }
   }
   .email-input {
     max-width: 25rem;
     display: grid;
-    grid-template-columns: 1fr 5.5rem;
+    grid-template-columns: 2fr 1fr;
     gap: 0.5rem;
   }
   input {
     border: none;
-    padding: 2rem;
     &[type="email"] {
       padding: 0.5rem 1rem;
       grid-column: 1/2;
@@ -34,7 +37,6 @@
     &[type="submit"] {
       padding: 0.5rem 1rem;
       grid-column: 2/3;
-      //color to be updated
       background-color: $branded-blue;
       color: white;
       font-weight: bold;
