--- a/dev/scss/_responsive-waste.scss
+++ b/dev/scss/_responsive-waste.scss
@@ -7,43 +7,42 @@
 }
 
 .waste-info {
-    text-align: center;
-    h2 {
-        max-width: 10rem;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    p{
-        font-size: .9rem;
-        max-width: 16.5rem;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  text-align: center;
+  h2 {
+    max-width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  p {
+    font-size: 0.9rem;
+    max-width: 16.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @include mq-tablet($mid) {
-    .waste-info{
-        h2{
-            max-width: 25rem;
-        }
-        p{
-            max-width: 33rem;
-            font-size: .8rem;
-        }
+  .waste-info {
+    h2 {
+      max-width: 25rem;
     }
+    p {
+      max-width: 33rem;
+      font-size: 0.8rem;
+    }
+  }
 }
 
 @include mq-desktop($desktop) {
-    .waste-info {
-        p {
-            font-size: .9rem;
-            max-width: 41rem;
-        }
+  .waste-info {
+    p {
+      font-size: 0.9rem;
+      max-width: 41rem;
     }
+  }
 }
 
 @media (max-width: 600px) {
-
   .waste-collection {
     @include display-flex;
     padding-top: 2rem;
@@ -51,16 +50,14 @@
     align-content: space-between;
     flex-wrap: nowrap;
     position: relative;
-    scale: .75;
-    h3{
-
-        padding: 1rem;
-        color: $dark-gray-elements;
-        text-align: center;
-        
+    scale: 0.75;
+    h3 {
+      padding: 1rem;
+      color: $dark-gray-elements;
+      text-align: center;
     }
- }    
-  .waste-collection:nth-child(1n+2)::after {
+  }
+  .waste-collection:nth-child(1n + 2)::after {
     content: "";
     position: absolute;
     background-color: lightgray;
@@ -71,9 +68,8 @@
     z-index: 2;
     top: -10px;
     left: -35px;
+  }
 }
-}
-
 
 // @include mq-tablet($mid) {
 //   .hidden-mobile {
@@ -105,64 +101,77 @@
 //   }
 // }
 
+@include mq-tablet($mid) {
+  .hidden-mobile {
+    display: block;
+  }
+  .waste-collection {
+    max-width: 15.625rem;
+  }
+  .waste-articles {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 
-@include mq-tablet($mid){
-
-    .hidden-mobile {
-        display: block;
+    gap: 0.25rem;
+  }
+  .waste-collection {
+    h3 {
+      display: block;
+      text-align: center;
+      width: 100%;
+      height: 1.5rem;
     }
-    .waste-collection {
-        max-width: 15.625rem;
+    a {
+      font-size: 0.9rem;
     }
-    .waste-articles{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-
-        gap: .25rem;
-    }
-    .waste-collection {
-    h3{
-        display: block;
-        text-align: center;
-        width: 100%;
-        height: 1.5rem;
-    }
-    a{
-        font-size: 0.9rem;
-    }
-}
+  }
 }
 @include mq-desktop($desktop) {
-    .hidden-mobile {
-        display: block;
-
+  .hidden-mobile {
+    display: block;
+  }
+  .waste-articles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: $center;
+    align-items: $center;
+    padding: 1rem;
+    margin: auto;
+  }
+  .waste-collection {
+    h3 {
+      display: block;
+      text-align: center;
+      width: 100%;
+      height: 1.5rem;
     }
-    .waste-articles{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-content: $center;
-        align-items: $center;
-        padding: 1rem;
-        margin: auto;
+    a {
+      font-size: 0.9rem;
     }
-    .waste-collection{
-     h3 {
-        display: block;
-        text-align: center;
-        width: 100%;
-        height: 1.5rem;
-    }
-    a{
-        font-size: 0.9rem;
-    }
-    }   
-
-
+  }
 }
 
 #carousel {
   // position: absolute;
   max-width: 100%;
   height: auto;
+}
+//this is for the dark blue wave below waste machinery
+.waste-articles {
+  position: relative;
+  padding-bottom: 5rem;
+}
+#dark-blue-wave {
+  background-image: url("../images/wave-blue-dark.png");
+  position: absolute;
+  bottom: -1px;
+  width: 100%;
+  height: 3rem;
+  background-position: center;
+  background-size: 170% 100%;
+  @media only screen and (min-width: 40rem) {
+    background-size: 100% 100%;
+    height: 5rem;
+  }
 }
