--- a/dev/scss/_responsive-waste.scss
+++ b/dev/scss/_responsive-waste.scss
@@ -7,43 +7,42 @@
 }
 
 .waste-info {
-    text-align: center;
-    h2 {
-        max-width: 10rem;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    p{
-        font-size: .9rem;
-        max-width: 16.5rem;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  text-align: center;
+  h2 {
+    max-width: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  p {
+    font-size: 0.9rem;
+    max-width: 16.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @include mq-tablet($mid) {
-    .waste-info{
-        h2{
-            max-width: 25rem;
-        }
-        p{
-            max-width: 33rem;
-            font-size: .8rem;
-        }
+  .waste-info {
+    h2 {
+      max-width: 25rem;
     }
+    p {
+      max-width: 33rem;
+      font-size: 0.8rem;
+    }
+  }
 }
 
 @include mq-desktop($desktop) {
-    .waste-info {
-        p {
-            font-size: .9rem;
-            max-width: 41rem;
-        }
+  .waste-info {
+    p {
+      font-size: 0.9rem;
+      max-width: 41rem;
     }
+  }
 }
 
 @media (max-width: 600px) {
-
   .waste-collection {
     @include display-flex;
     padding-top: 2rem;
@@ -51,15 +50,13 @@
     align-content: space-between;
     flex-wrap: nowrap;
     position: relative;
-    scale: .75;
-    h3{
-
-        padding: 1rem;
-        color: $dark-gray-elements;
-        
+    scale: 0.75;
+    h3 {
+      padding: 1rem;
+      color: $dark-gray-elements;
     }
- }    
-  .waste-collection:nth-child(1n+2)::after {
+  }
+  .waste-collection:nth-child(1n + 2)::after {
     content: "";
     position: absolute;
     background-color: lightgray;
@@ -70,9 +67,8 @@
     z-index: 2;
     top: -10px;
     left: -35px;
+  }
 }
-}
-
 
 // @include mq-tablet($mid) {
 //   .hidden-mobile {
@@ -104,53 +100,47 @@
 //   }
 // }
 
-
-@include mq-tablet($mid){
-    .waste-collection h3{
-        max-width: 16px;
-    }
-
-    .hidden-mobile {
-        display: block;
-    }
-    .waste-collection {
-        max-width: 15.625rem;
-    }
-    .waste-articles{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: .25rem;
-    }
-    .waste-collection h3{
-        margin-left: .5rem;
-        text-align: center;
-    }
+@include mq-tablet($mid) {
+  .hidden-mobile {
+    display: block;
+  }
+  .waste-collection {
+    max-width: 15.625rem;
+  }
+  .waste-articles {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.25rem;
+  }
+  .waste-collection h3 {
+    margin-left: 0.5rem;
+    text-align: center;
+    height: 2rem;
+  }
 }
 
 @include mq-desktop($desktop) {
-    .waste-collection h3{
-        max-width: 16px;
-    }
+  .waste-collection h3 {
+    max-width: 16px;
+  }
 
-    .hidden-mobile {
-        display: block;
-
-    }
-    .waste-articles{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-content: $center;
-        align-items: $center;
-        padding: 1rem;
-        text-align: center;
-        margin: auto;
-    }
-    .waste-collection h3 {
-        margin-left: 4.5rem;
-        text-align: center;
-    }
-
+  .hidden-mobile {
+    display: block;
+  }
+  .waste-articles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: $center;
+    align-items: $center;
+    padding: 1rem;
+    text-align: center;
+    margin: auto;
+  }
+  .waste-collection h3 {
+    margin-left: 4.5rem;
+    text-align: center;
+  }
 }
 
 #carousel {
