update responsive waste images

--- a/dev/scss/_responsive-waste.scss
+++ b/dev/scss/_responsive-waste.scss
@@ -106,6 +106,9 @@
   }
   .waste-collection {
     max-width: 15.625rem;
+    img {
+      max-width: 100%;
+    }
   }
   .waste-articles {
     display: grid;
@@ -117,7 +120,6 @@
     margin-left: 0.5rem;
     text-align: center;
     height: 2rem;
-
   }
 }
 @include mq-desktop($desktop) {
@@ -137,7 +139,6 @@
   .waste-collection h3 {
     margin-left: 4.5rem;
     text-align: center;
-
   }
 }
 
