Update email input length for desktop

--- a/dev/scss/_newsletter-signup.scss
+++ b/dev/scss/_newsletter-signup.scss
@@ -33,6 +33,9 @@
     &[type="email"] {
       padding: 0.5rem 1rem;
       grid-column: 1/2;
+      @media only screen and (min-width: 48rem) {
+        padding: 0.5rem 5rem 0.5rem 1rem;
+      }
     }
     &[type="submit"] {
       padding: 0.5rem 1rem;
